--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -59,3 +59,8 @@
     }
   }
 }
+
+.slick-track, .slick-list {
+  -webkit-perspective: 2000;
+  -webkit-backface-visibility: hidden;
+}
